--- a/style.css
+++ b/style.css
@@ -100,13 +100,17 @@ margin-right: 20px;
 .video-card {
   display: block;
   position:relative;
+  height: 1058px;
 }
 
 .video-bg {
   display: block;
+  overflow: hidden;
   
 }
+.video-bg video {
 
+}
 .card {
   display: block;
   background-image: -webkit-linear-gradient(top, rgba(0,70,209,0.70), rgba(152,0,186,0.70));
@@ -127,13 +131,32 @@ h1 {
   font-size: 68px;
   margin: 0px;
   padding-bottom: 20px;
-  padding-top: 160px;
+  padding-top: 440px;
 }
 h3 {
   text-align: center;
   font-size:22px;
   font-weight:400;
   margin: 0px;
+}
+
+.arrow {
+  position: absolute;
+  top: 1000px;
+  left:0;
+  right:0;
+  bottom:0;
+}
+.arrow svg {
+  padding: 0px;
+  margin-left:auto;
+  margin-right:auto;
+  display:block;
+}
+.arrow polyline {
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 @media screen and (max-width: 640px) {
@@ -145,3 +168,70 @@ h3 {
   }
   }
 
+/*-------------------------------------------------------------------------------*/
+.b1 {
+  text-align: center;
+  display: block;
+}
+.avatar {
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding-top: 107px;
+  padding-bottom: 89px;
+}
+
+.b1 h2 {
+  display: block;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Roboto',Arial,sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.23;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.b1 div {
+  max-width: 100px;
+  width: 100%;
+  height: 3px;
+  background-color: #1f5bff;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.b1 p {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 760px;
+  margin-top: 40px;
+  font-size: 20px;
+  line-height: 1.55;
+  font-family: 'Roboto',Arial,sans-serif;
+  font-weight: 300;
+  white-space: pre-wrap;
+}
+
+.b1 .button {
+  margin-top: 60px;
+  text-align: center;
+  max-width: 242px;
+  padding-top: 19px;
+  width: 242px;
+  height: 35px;
+  display: inline-block;
+  font-family: 'Roboto',Arial,sans-serif;
+  font-size: 16px;
+  vertical-align: middle;
+  font-weight: 700;
+  background-color: #1f5bff;
+  border-radius: 30px;
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+}
