--- a/style.css
+++ b/style.css
@@ -8,11 +8,40 @@ a {
   text-decoration: none;
   color: white;
 }
+h2 {
+  display: block;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Roboto',Arial,sans-serif;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.23;
+  text-align: center;
+  margin-bottom: 40px;
+}
+h1 {
+  text-align: center;
+  font-family: 'Roboto',Arial,sans-serif;
+  font-weight: 600;
+  font-size: 68px;
+  margin: 0px;
+  padding-bottom: 20px;
+  padding-top: 440px;
+}
+h3 {
+  text-align: center;
+  font-size:22px;
+  font-weight:400;
+  margin: 0px;
+}
+
+/*-------------------------------------------------------------------------------*/
+
 header {
   width: 100%;
   padding: 0px;
 }
-
 .menu {
   display: table;
   background-color:rgb(0, 53, 176);
@@ -20,7 +49,6 @@ header {
   color: white;
   height: 80px;
 }
-
 .logo {
   font-family:Roboto, Arial, sans-serif;
   font-size:24px;
@@ -29,13 +57,11 @@ header {
   vertical-align: middle;
   padding-left: 40px;
 }
-
 .menu ul {
   display: table-cell;
   list-style: none;
   vertical-align: middle;
 }
-
 .menu li {
   color: white;
   float: right;
@@ -45,14 +71,12 @@ header {
   margin-right: 40px;
   margin-left: 0px;
 }
-
 .burger {
   padding-top: 6px;
   vertical-align: middle;
   display: none;
   margin-right: -20px;
 }
-
 .burger span {
   display: block;
   margin-bottom: 6px;
@@ -78,13 +102,11 @@ header {
   background-color: black;
 }
 }
-
 @media screen and (max-width: 640px) {
     .menu {
   height: 60px;
 }
   }
-
 @media screen and (max-width: 1200px) {
 .menu li {
 margin-right: 20px;
@@ -102,14 +124,10 @@ margin-right: 20px;
   position:relative;
   height: 1058px;
 }
-
 .video-bg {
   display: block;
   overflow: hidden;
   
-}
-.video-bg video {
-
 }
 .card {
   display: block;
@@ -123,23 +141,6 @@ margin-right: 20px;
   bottom:0;
   width: 100%;
 }
-
-h1 {
-  text-align: center;
-  font-family: 'Roboto',Arial,sans-serif;
-  font-weight: 600;
-  font-size: 68px;
-  margin: 0px;
-  padding-bottom: 20px;
-  padding-top: 440px;
-}
-h3 {
-  text-align: center;
-  font-size:22px;
-  font-weight:400;
-  margin: 0px;
-}
-
 .arrow {
   position: absolute;
   top: 1000px;
@@ -159,19 +160,12 @@ h3 {
   text-align: center;
 }
 
-@media screen and (max-width: 640px) {
-  h1 {
-    font-size: 30px;
-  }
-  h3 {
-    font-size: 14px;
-  }
-  }
-
 /*-------------------------------------------------------------------------------*/
 .b1 {
   text-align: center;
   display: block;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .avatar {
   border-radius: 50%;
@@ -181,20 +175,6 @@ h3 {
   padding-top: 107px;
   padding-bottom: 89px;
 }
-
-.b1 h2 {
-  display: block;
-  max-width: 960px;
-  margin-left: auto;
-  margin-right: auto;
-  font-family: 'Roboto',Arial,sans-serif;
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 1.23;
-  text-align: center;
-  margin-bottom: 40px;
-}
-
 .b1 div {
   max-width: 100px;
   width: 100%;
@@ -204,7 +184,6 @@ h3 {
   margin-left: auto;
   margin-right: auto;
 }
-
 .b1 p {
   display: block;
   margin-left: auto;
@@ -217,21 +196,67 @@ h3 {
   font-weight: 300;
   white-space: pre-wrap;
 }
-
 .b1 .button {
-  margin-top: 60px;
+  margin-top: 20px;
+  margin-bottom: 80px;
   text-align: center;
   max-width: 242px;
-  padding-top: 19px;
+  padding-top: 21px;
   width: 242px;
-  height: 35px;
+  height: 40px;
   display: inline-block;
   font-family: 'Roboto',Arial,sans-serif;
   font-size: 16px;
   vertical-align: middle;
   font-weight: 700;
   background-color: #1f5bff;
-  border-radius: 30px;
-  -moz-border-radius: 30px;
-  -webkit-border-radius: 30px;
+  border-radius: 35px;
+  -moz-border-radius: 35px;
+  -webkit-border-radius: 35px;
+}
+
+@media screen and (max-width: 1200px) {
+  .b1 p {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 640px) {
+  .b1 p {
+    font-size: 16px;
+    line-height: 1.45;
+  }
+}
+
+/*-------------------------------------------------------------------------------*/
+
+.b2 {
+  text-align: center;
+  display: block;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #f2f2f2;
+}
+
+
+
+
+
+
+
+/*-------------------------------------------------------------------------------*/
+@media screen and (max-width: 1200px) {
+  h2 {
+    font-size: 32px;
+  }
+}
+@media screen and (max-width: 640px) {
+  h1 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 14px;
+  }
+  h2 {
+    font-size: 28px;
+  }
 }
