--- a/style.css
+++ b/style.css
@@ -30,12 +30,44 @@ h1 {
   padding-top: 440px;
 }
 h3 {
+  font-size: 28px;
+  line-height: 1.17;
+  font-family: 'Roboto',Arial,sans-serif;
+  font-weight: 600;
+  color: #000;
+}
+h4 {
   text-align: center;
   font-size:22px;
   font-weight:400;
   margin: 0px;
 }
+.divider {
+  margin-bottom: 90px;
+}
 
+/*-------------------------------------------------------------------------------*/
+@media screen and (max-width: 1200px) {
+  h2 {
+    font-size: 32px;
+  }
+  h3 {
+    font-size: 25px;
+  }
+}
+@media screen and (max-width: 640px) {
+  h1 {
+    font-size: 30px;
+  }
+  h4 {
+    font-size: 14px;
+  }
+  h2 {
+    font-size: 28px;
+  }
+}
+
+/*-------------------------------------------------------------------------------*/
 /*-------------------------------------------------------------------------------*/
 
 header {
@@ -69,7 +101,7 @@ header {
   font-size:16px;
   font-weight:600;
   margin-right: 40px;
-  margin-left: 0px;
+  margin-left: 0;
 }
 .burger {
   padding-top: 6px;
@@ -80,7 +112,7 @@ header {
 .burger span {
   display: block;
   margin-bottom: 6px;
-  margin-right: 0px;
+  margin-right: 0;
   height: 3px;
   width: 28px;
   background-color: white;
@@ -149,7 +181,7 @@ margin-right: 20px;
   bottom:0;
 }
 .arrow svg {
-  padding: 0px;
+  padding: 0;
   margin-left:auto;
   margin-right:auto;
   display:block;
@@ -235,28 +267,59 @@ margin-right: 20px;
   padding-left: 20px;
   padding-right: 20px;
   background-color: #f2f2f2;
+  margin: 0;
 }
-
-
-
-
-
-
-
-/*-------------------------------------------------------------------------------*/
+.b2 h2 {
+  padding-top: 75px;
+  padding-bottom: 90px;
+  margin: 0 auto;
+}
+.b2 img {
+  width: 80px;
+}
+.skill-table {
+  max-width: 1200px;
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+}
+.skill {
+  display: table-cell;
+  max-width: 360px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 18px;
+  line-height: 1.55;
+  font-weight: 100;
+}
 @media screen and (max-width: 1200px) {
-  h2 {
-    font-size: 32px;
+  .skill-table {
+    max-width: 960px;
+  }
+  .skill {
+  font-size: 16px;
+}
+}
+
+@media screen and (max-width: 960px) {
+  .skill-table {
+    display: block;
+  }
+  .skill {
+    display: block;
+    margin: 0 auto;
+    max-width: 560px;
+    padding-bottom: 45px;
+  }
+  .divider {
+    display: none;
   }
 }
+
 @media screen and (max-width: 640px) {
-  h1 {
-    font-size: 30px;
-  }
-  h3 {
-    font-size: 14px;
-  }
-  h2 {
-    font-size: 28px;
+  .skill {
+  font-size: 14px;
+  line-height: 1.45;
   }
 }
+
